tests/baselines/reference/ES5SymbolProperty2.errors.txt
ES5SymbolProperty2.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ES5SymbolProperty2.ts(10,11): error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.


==== ES5SymbolProperty2.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var Symbol: any;
    
        export class C {
            [Symbol.iterator]() { }
        }
        (new C)[Symbol.iterator];
    }
    
    (new M.C)[Symbol.iterator];
              ~~~~~~
!!! error TS2585: 'Symbol' only refers to a type, but is being used as a value here. Do you need to change your target library? Try changing the 'lib' compiler option to es2015 or later.